RESOLVED FIXED112174
XHTML MP 1.1 and 1.2 give errors for entities
https://bugs.webkit.org/show_bug.cgi?id=112174
Summary XHTML MP 1.1 and 1.2 give errors for entities
Liam Quinn
Reported 2013-03-12 11:50:45 PDT
When an XHTML Mobile Profile 1.1 or 1.2 document contains an XHTML entity such as © or  , WebKit's XML parser gives an error. When an XHTML Mobile Profile 1.0 document does the same thing, it works as expected. The XML parser has a list of public doctypes for which it resolves XHTML entities. This list includes XHTML MP 1.0 but not XHTML MP 1.1 or 1.2. We should treat XHTML MP 1.1 and 1.2 the same as 1.0 in this respect.
Attachments
Patch (6.88 KB, patch)
2013-03-12 12:04 PDT, Liam Quinn
no flags
Liam Quinn
Comment 1 2013-03-12 12:04:39 PDT
Rob Buis
Comment 2 2013-03-13 13:16:42 PDT
Comment on attachment 192782 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-03-13 13:27:05 PDT
Comment on attachment 192782 [details] Patch Clearing flags on attachment: 192782 Committed r145744: <http://trac.webkit.org/changeset/145744>
WebKit Review Bot
Comment 4 2013-03-13 13:27:07 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5 2013-03-13 14:41:29 PDT
Comment on attachment 192782 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=192782&action=review > Source/WebCore/xml/parser/XMLDocumentParserQt.cpp:644 > + || (publicId == QLatin1String("-//WAPFORUM//DTD XHTML Mobile 1.0//EN") > + || (publicId == QLatin1String("-//WAPFORUM//DTD XHTML Mobile 1.1//EN") This part broke the Qt build. The line starts with an opening parentheses, the next opening parentheses is the one after QLatin1String but then there's only one closing parentheses.
Simon Hausmann
Comment 6 2013-03-13 14:46:17 PDT
Prospective fix landed in http://trac.webkit.org/changeset/145756 - hope it works
Liam Quinn
Comment 7 2013-03-13 14:50:29 PDT
(In reply to comment #6) > Prospective fix landed in http://trac.webkit.org/changeset/145756 - hope it works Thanks Simon--that change looks fine. I'm sorry for breaking the build.
Note You need to log in before you can comment on or make changes to this bug.