Source/WebCore: Handle XHTML entities in XHTML Mobile Profile 1.1 and 1.2. We previously only handled them in XHTML Mobile Profile 1.0. https://bugs.webkit.org/show_bug.cgi?id=112174 RIM PR 309038

Patch by Liam Quinn <lquinn@blackberry.com> on 2013-03-13
Reviewed by Rob Buis.
Internally reviewed by Leo Yang.

Check for the 1.1 and 1.2 doctypes alongside the 1.0 doctype.

Tests: fast/doctypes/xhtml-with-xhtmlmp11-doctype.xhtml
       fast/doctypes/xhtml-with-xhtmlmp12-doctype.xhtml

* xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::externalSubsetHandler):
* xml/parser/XMLDocumentParserQt.cpp:
(WebCore::XMLDocumentParser::parseDtd):

LayoutTests: New tests to check that XHTML entities are supported in XHTML Mobile Profile 1.1 and 1.2.
https://bugs.webkit.org/show_bug.cgi?id=112174
RIM PR 309038

Patch by Liam Quinn <lquinn@blackberry.com> on 2013-03-13
Reviewed by Rob Buis.
Internally reviewed by Leo Yang.

* fast/doctypes/xhtml-with-xhtmlmp11-doctype-expected.txt: Added.
* fast/doctypes/xhtml-with-xhtmlmp11-doctype.xhtml: Added.
* fast/doctypes/xhtml-with-xhtmlmp12-doctype-expected.txt: Added.
* fast/doctypes/xhtml-with-xhtmlmp12-doctype.xhtml: Added.

Canonical link: https://commits.webkit.org/130593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145744 268f45cc-cd09-0410-ab3c-d52691b4dbfc